# RTG_S0006E

./: README.md
2020/projects/MathLibrary/: MathLibrary.sln
2020/projects/neckGraphics/: CMakeLists.txt  IndexValidation.txt
2020/projects/neckGraphics/code/: Basic.shader  ControlManager.cc  ControlManager.h  Entity.cc  Entity.h  ErrorHandler.h  Framebuffer.cc  Framebuffer.h  Light.cc  Light.h  Mesh.cc  Mesh.h  Rasterizer.cc  Rasterizer.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  Texture.cc  Texture.h  exampleapp.cc  exampleapp.h
2020/projects/neckGraphics/code/resources/mathLibrary/: Matrix2D.h  Matrix3D.h  Vector2D.h  Vector3D.h
2020/projects/neckGraphics/code/resources/shaders/: BlinnPhong.shader  ImageTexture.shader  PulseColor.shader  StaticRainbow.shader
MathLibrary/Doxygen Documentation/html/: _matrix2_d_8h_source.html  _matrix3_d_8h_source.html  _vector2_d_8h_source.html  _vector3_d_8h_source.html  annotated.html  classes.html  classmatrix2_d-members.html  classmatrix2_d.html  (+11 more)
lab-env-master/engine/: config.h
lab-env-master/projects/NackensGrafik/: CMakeLists.txt  profiling_11_23_19_14_57.csv  profiling_11_23_19_17_24.csv
lab-env-master/projects/NackensGrafik/code/: FragShadeLight.hlsl  FragmentShade.hlsl  GraphicsNode.cc  GraphicsNode.h  LightResource.cc  LightResource.h  Matrix3D.h  MeshResource.cc  MeshResource.h  Minecraft_nacken.tga  Rasterizer.cc  Rasterizer.cpp  Rasterizer.h  RedPix.tga  ShaderObject.cc  ShaderObject.h  TextureResource.cc  TextureResource.h  Vector2D.h  Vector3D.h  VertShadeLight.hlsl  VertexShade.hlsl  exampleapp.cc  exampleapp.h  main.cc  saraCubeUV.tga  saraCubeUV2.tga
lab-env-master/projects/NeckGraphics/: CMakeLists.txt
lab-env-master/projects/NeckGraphics/code/: Matrix3D.h  Mesh.cc  Mesh.h  exampleapp.cc  exampleapp.h  main.cc
mathLibTESTER/: mathLibTESTER.sln
mathLibTESTER/mathLibTESTER/: Matrix3D.h  Vector3D.h  mathLibTESTER.vcxproj  test.cpp
(+27 files in other folders)
